# ntc-software

./: .gitignore  README.md  buildproto.sh
DRS4-util/dark_couts/: dark_counts.py  dark_counts_lecroy.py
DRS4-util/drs_duo_ntc/: CMakeLists.txt  Makefile  cmake_install.cmake  run_config.cfg
DRS4-util/drs_duo_ntc/proto/: ntc.pb.cc  ntc.pb.h
DRS4-util/drs_duo_ntc/src/: drs_ntc.cpp  motor.cpp
DRS4-util/drs_ntc/: 41-drs.rules  CMakeLists.txt  Makefile  run_config.cfg
DRS4-util/drs_ntc/include/: motor.hpp
DRS4-util/drs_ntc/net/: ProtoSerializer.cpp  ProtoSerializer.hpp  ZmqPub.cpp  ZmqPub.hpp
DRS4-util/drs_ntc/src/: DRS.cpp  drs_dump_dt_calib.cpp  drs_ntc.cpp  motor.cpp
DRS4-util/motor_test/: motor_arival.py
HV80_carrier/: HV80.lbr  eagle.epf  hv80_carrier.brd  hv80_carrier.sch
dog_ang_pony_show/: main.py  zmq_receiver.py
motor/: moto.py  motor_laser_thing.py  test.py
proto/: ntc.proto
scrod/libmtc-data/: Makefile  libmtc-data.files  mtcdata.files  tests.cpp
scrod/libmtc-data/lib/: channelignoremask.hpp  curve.hpp  dataoperations.hpp  datapacket.hpp  datastore.hpp  index.hpp  memory.hpp  pmtfacemap.hpp  pmtmap.hpp  scrodmap.hpp  util.hpp  version.hpp
scrod/libmtc-data/src/: channelignoremask.cpp  curve.cpp  dataoperations.cpp  datapacket.cpp  index.cpp  memory.cpp  pmtfacemap.cpp  pmtmap.cpp  scrodmap.cpp  util.cpp  version.cpp
scrod/mTCctl3/libreadoutd-net/: Makefile  libreadoutd-net.files  main.cpp
scrod/mTCctl3/libreadoutd-net/lib/: scrodnet.hpp
scrod/mTCctl3/libreadoutd-net/src/: scrodnet.cpp
scrod/mTCctl3/pythonAPI/: Makefile  motortest.py  readoutdpython.py  regutil.files  test.py
scrod/mTCctl3/pythonAPI/lib/: config.hpp
scrod/mTCctl3/pythonAPI/src/: cal.cpp  cardInfo.cpp  collector.cpp  getreg.cpp  init.cpp  motor.cpp  setreg.cpp  trg.cpp
scrod/mTCctl3/readoutd-net/: Makefile  readoutd.net.files
scrod/mTCctl3/readoutd-net/lib/: commandline.hpp  storage.hpp
scrod/mTCctl3/readoutd-net/src/: commandline.cpp  main.cpp  storage.cpp
scrod/mTCctl3/readoutd2/: CMakeLists.txt  Makefile  settings.set  udpmtc.files  udpmtc.includes
scrod/mTCctl3/readoutd2/lib/: common.hpp  coredataqueue.hpp  monitor.hpp  netutil.h  packets.hpp  readoutProtocol.hpp  registerinterface.hpp  settings.hpp  storage.hpp  trigger.hpp  udplistner.hpp  web++.hpp
scrod/mTCctl3/readoutd2/src/: monitor.cpp  motor.cpp  registerinterface.cpp  settings.cpp  storage.cpp  trigger.cpp  udplistner.cpp  udpmtc.cpp
scrod/mTCctl3/readoutd2/test/: udpscrod.cpp  udpsender.cpp  udpshell.cpp
